--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,7 @@
-<h1>{{page_title}}</h1>
-<p>home works!</p>
+<!DOCTYPE html>
+<h1></h1>
+<p></p>
+<h1 class="text-center">Bienvenido</h1>
+<div class="text-center">
+<img src="/assets/images/comfa4.jpg" width="350" height="350" alt="350">
+</div>
