--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,13 +1,13 @@
-<section class="h-100 bg-dark">
+<section class="h-100 bg-secondary">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col">
         <div class="card card-registration my-4">
           <div class="row g-0">
             <div class="col-xl-6 d-none d-xl-block">
-              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/img4.webp"
+              <!--<img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/img4.webp"
                 alt="Sample photo" class="img-fluid"
-                style="border-top-left-radius: .25rem; border-bottom-left-radius: .25rem;" />
+                style="border-top-left-radius: .25rem; border-bottom-left-radius: .25rem;" />-->
             </div>
             <div class="col-xl-6">
               <div class="card-body p-md-5 text-black">
@@ -29,7 +29,7 @@
                   <div class="col-md-6 mb-4">
                     <div class="form-outline">
                       <label for="id">Identificación</label>
-                      <input type="text" name="Id" class="form-control" #id="ngModel"
+                      <input type="text" name="id" class="form-control" #id="ngModel"
                       [(ngModel)]="user.id" required pattern="[0-9]+" />
                       
 
