--- a/src/app/components/user-edit/user-edit.component.html
+++ b/src/app/components/user-edit/user-edit.component.html
@@ -20,8 +20,8 @@
         <div class="row">
         <div class="col-md-6 mb-4">
             <div class="form-outline">
-              <label for="id">Identificación</label>
-              <input type="text" name="Id" class="form-control" #id="ngModel"
+              <label for="id">Identificacion</label>
+              <input type="text" name="id" class="form-control" #id="ngModel"
               [(ngModel)]="user.id" required pattern="[0-9]+" />              
 
               <small *ngIf="!id.valid && id.touched" class="invalid-feedback d-block">
