--- a/src/app/components/vehiculos/vehiculos.component.html
+++ b/src/app/components/vehiculos/vehiculos.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 mt-3">
     <h1>{{page_title}}</h1>
     <p *ngIf="status != 'success'">       
-        Crea un nuevo Vehiculo 
+        Crea un nuevo tipo de vehiculo 
     </p>
     <hr/><!--LINEA DIVISORIA-->
 
