--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -109,9 +109,8 @@
                 <div class="d-flex justify-content-end pt-3">
                   <!--<button type="button" class="btn btn-warning">Regresar</button>-->
                   <!--<button type="button" class="btn btn-success ms-2">Registrate</button>-->
-                  <input type="submit" value="Registrate" class="btn btn-success" [disabled]=
-                  "registerForm.invalid"/>
-                  <input type="button" value="Regresar" class="btn btn-warning" (click)= "regresar()">
+                  <button class="btn btn-info">Registrate</button>
+                  <input type="button" value="Regresar" class="btn btn-primary" (click)= "regresar()">
                            
 
                 </div> 
