--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           
           <a class="dropdown-item" [routerLink]="['/crear-vehiculo']">Crear clase vehiculo</a>
-          <a class="dropdown-item" href="#">Crear vehiculo</a>
+          <a class="dropdown-item" [routerLink]="['/tipo-vehiculos']">Crear vehiculo</a>
           <!--<div class="dropdown-divider"></div>-->
           <!--<a class="dropdown-item" href="#">Mi perfil</a>-->
           <a class="dropdown-item" [routerLink]="['/ajustes']">Ajustes</a>
