--- a/src/app/components/tipo-vehiculo/tipo-vehiculo.component.html
+++ b/src/app/components/tipo-vehiculo/tipo-vehiculo.component.html
@@ -1,1 +1,38 @@
 <p>tipo-vehiculo works!</p>
+<div class="col-md-12 mt-3">
+    <h1>{{page_title}}</h1>
+    <p *ngIf="status != 'success'">       
+        Crea un vehiculo 
+    </p>
+    <hr/><!--LINEA DIVISORIA-->
+
+     <div class="alert alert-success col-md-5 mt-3" *ngIf="status == 'success'">
+        El vehiculo se ha creado correctamente !! 
+    </div>
+    
+    <div class="alert alert-danger col-md-5 mt-3" *ngIf="status == 'error'">
+        El vehiculo no se ha guardado !!!                                                                                                
+    </div> 
+
+    <!--FORMULARIO DE CREAR TIPO DE VEHICULOS-->
+    <!--ngform es formulario de angular-->    
+    <!--ngIf sirve para hacer una condicion -->
+    <form #tipoVehiculoForm="ngForm" (ngSubmit)="onSubmit(tipoVehiculoForm)" class="col-md-5">
+        <div class="form-group">
+            <label for="TipoVehiculos">Nombre</label>
+            <input type="text" name="TipoVehiculos" class="form-control" #TipoVehiculos="ngModel" [(ngModel)]=
+            "tipovehiculo.nombre" required />
+            <small *ngIf="TipoVehiculos.valid && TipoVehiculos.touched" class="invalid-feedback d-block">
+                El nombre del vehiculo es erroneo
+            </small>            
+        </div>
+
+       <!-- <input type="submit" value="guardar" class="btn btn-success" [disabled]="
+        vehiculoForm.invalid" />-->
+
+        <button class="btn btn-info">Guardar</button>
+        <input type="button" value="Regresar" class="btn btn-primary" (click)= "regresar()">
+
+    </form>
+    
+</div>
