errores con tipos-vehiculo v1

--- a/src/app/components/vehiculos/vehiculos.component.html
+++ b/src/app/components/vehiculos/vehiculos.component.html
@@ -19,9 +19,8 @@
     <form #vehiculoForm="ngForm" (ngSubmit)="onSubmit(vehiculoForm)" class="col-md-5">
         <div class="form-group">
             <label for="Vehiculo">Nombre</label>
-            <input type="text" name="Vehiculo" class="form-control" #Vehiculo="ngModel" [(ngModel)]=
-            "vehiculo.Vehiculo" required />
-            <small *ngIf="Vehiculo.valid && Vehiculo.touched" class="invalid-feedback d-block">
+            <input type="text" name="claseVehiculo" class="form-control" #claseVehiculo="ngModel" [(ngModel)]="vehiculo.claseVehiculo" required />
+            <small *ngIf="claseVehiculo.valid && claseVehiculo.touched" class="invalid-feedback d-block">
                 El nombre del vehiculo es erroneo
             </small>            
         </div>
