pruebas-pruebas-angular

--- a/src/app/components/vehiculos/vehiculos.component.html
+++ b/src/app/components/vehiculos/vehiculos.component.html
@@ -34,3 +34,15 @@
     </form>
     
 </div>
+
+<!--
+<div>
+            <label for="id-vehiculos">vehiculos</label>
+            <select name="id-vehiculos" #tipoVehiculoForm="ngModel" [(ngModel)]= "tipovehiculo.id-vehiculos" 
+            class="form-control">            
+            <option *ngFor="let v of vehiculos" value="{{v.claseVehiculo}}">
+                {{vehiculos.name}}
+            </option>   
+            </select>    
+
+-->
