--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,7 +42,7 @@
           <!--<div class="dropdown-divider"></div>-->
           <!--<a class="dropdown-item" href="#">Mi perfil</a>-->
           <a class="dropdown-item" [routerLink]="['/ajustes']">Ajustes</a>
-          <a class="dropdown-item" [routerLink]="['/logout/1']">Salir</a>
+          <a class="dropdown-item" [routerLink]="['/logout/1']">Salir</a><!--ruta que me llava a la salida-->
         </div>
       </li>
       <!--<li class="nav-item">
